fixed animation on mobile app dev page

--- a/components/services/MobileAppDevelopment/Styles.css
+++ b/components/services/MobileAppDevelopment/Styles.css
@@ -337,11 +337,6 @@
 }
 
 /* orbitting animation */
-.mockup-slider {
-  border-top-left-radius: 40px !important;
-  border-top-right-radius: 40px !important;
-}
-
 .mockup-slider img {
   position: absolute;
   top: 0;
@@ -392,26 +387,4 @@
   top: 0;
   height: 10px; /* Thickness of the glow line */
   background: transparent;
-}
-
-.mobile-app-dev-glow::after {
-  content: "";
-  position: absolute;
-  top: 0px; /* How far the glow spreads above the line */
-  left: 0;
-  width: 100%;
-  height: 80px; /* Height of glow effect */
-  /* background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0.7),
-    rgba(255, 255, 255, 0)
-  ); */
-  background: linear-gradient(
-    to bottom,
-    rgba(150, 141, 141, 0.7),
-    rgba(255, 255, 255, 0)
-  );
-  /* filter: blur(0px); */
-  opacity: 1;
-  pointer-events: none;
 }
